test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_function_return_none_array.plx
pub fn foo(none) [2]none {
    return 2
}

pub fn main(none) i32 {
    return 0
}
